# m4

./: .dir-locals.el  .gitignore  configure.ac
src/: Makefile.am  m4.c  strtable.c  strtable.h
