dnl               -*- mode: autoconf; -*-
dnl Process this file with autoconf to produce configure script.
AC_PREREQ([3.0])
AC_INIT([OSN m4], [1.0.0], [rakinar2@osndevs.org], [m4])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([dist-gz create-tarball-version])

dnl Check for programs.
AC_PROG_CC

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
